syntax = "proto3";

package rivet.backend.captcha;

enum CaptchaProvider {
	UNKNOWN = 0;

	HCAPTCHA = 1;
	TURNSTILE = 2;
}

message CaptchaConfig {
	message Hcaptcha {
		reserved 1;

		// Should not be unset. Optional for backwards compatibility
		optional string site_key = 2;
		optional string secret_key = 3;
	}

	message Turnstile {
		string site_key = 1;
		string secret_key = 2;
	}

	// How many times a user can bypass the captcha before being prompted
	// again. Set to 0 to always check the captcha.
	uint32 requests_before_reverify = 1;

	// Maximum time to allow the last user's captcha verification to be valid
	// before making them check again.
	int64 verification_ttl = 2;

	optional Hcaptcha hcaptcha = 101;
	optional Turnstile turnstile = 102;
}

message CaptchaClientResponse {
	message Hcaptcha {
		string client_response = 1;
	}

	message Turnstile {
		string client_response = 1;
	}

	// Verification method to use.
	oneof kind {
		Hcaptcha hcaptcha = 101;
		Turnstile turnstile = 102;
	}
}
